--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 /* font-family: 'Shrikhand', cursive; */
-<<<<<<< Updated upstream:style.css
-
-=======
->>>>>>> Stashed changes:public/css/style.css
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    max-width: 768px;
-    margin: auto;
+  max-width: 768px;
+  margin: auto;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
-    background-color:ghostwhite;
+  text-align: center;
 }
 
 h1 {
-    font-family: 'Shrikhand', cursive;
-    text-align: center;
-    vertical-align: middle;
-    padding-top: 20px;
-    padding-bottom: 10px;
+  font-family: "Shrikhand", cursive;
+  vertical-align: middle;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
-<<<<<<< Updated upstream:style.css
-=======
 .localization {
   height: 50px;
   line-height: 50px;
@@ -77,4 +71,3 @@ h4 {
 }
 
 /*# sourceMappingURL=style.css.map */
->>>>>>> Stashed changes:public/css/style.css
