li, icons and h4 improved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,13 +66,24 @@ section {
 }
 
 li {
-  display: flex;
   background-color: #f6f6f6;
+  margin: 20px;
+  border-radius: 20px;
+  height: 12vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.fa-solid {
+  padding-left: 7vw;
 }
 
 h4 {
   font-size: 0.9em;
-  text-align: center;
+  margin: auto;
+  padding-left: 10px;
+  padding-right: 7vw;
 }
 
 /*# sourceMappingURL=style.css.map */
