--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,12 +75,8 @@ h3 {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
 }
 
-main {
-  padding: 20px;
-}
-
 section {
-  padding: 40px 0;
+  padding: 40px 20px;
 }
 
 li {
@@ -102,4 +98,35 @@ h4 {
   margin: auto;
   padding-left: 10px;
   padding-right: 7vw;
+}
+
+h5 {
+  font-size: 1.1em;
+}
+
+.restaurants {
+  background-color: $grey-bg;
+}
+
+.card-resto {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  border-radius: 25px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 20px;
+  img {
+    max-width: 100%;
+    height: 70%;
+    object-fit: cover;
+  border-radius: 25px 25px 0 0;
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
 }
