--- a/sass/main.scss
+++ b/sass/main.scss
@@ -112,6 +112,7 @@ h5 {
   height: 50vh;
   display: flex;
   flex-direction: column;
+  background-color: white;
   border-radius: 25px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
