--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,7 +45,7 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  padding-bottom: 15px;
+  padding-bottom: 25px;
 }
 
 .btn {
@@ -79,25 +79,22 @@ section {
   padding: 40px 20px;
 }
 
-li {
+.step {
   background-color: $grey-bg;
-  margin: 20px;
+  margin: 0 0 20px 20px;
   border-radius: 20px;
-  height: 12vh;
+  padding: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 .fa-solid {
-  padding-left: 7vw;
+  padding-right: 20px;
 }
 
 h4 {
   font-size: 0.9em;
-  margin: auto;
-  padding-left: 10px;
-  padding-right: 7vw;
 }
 
 h5 {
@@ -109,7 +106,7 @@ h5 {
 }
 
 .card-resto {
-  height: 50vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   background-color: white;
