--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,17 +15,31 @@ header {
   text-align: center;
 }
 
+nav {
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
 h1 {
   font-family: "Shrikhand", cursive;
+  font-weight: 400;
   vertical-align: middle;
   padding-top: 20px;
   padding-bottom: 10px;
 }
 
 .localization {
-  height: 50px;
-  line-height: 50px;
+  height: 55px;
+  line-height: 55px;
   background-color: #e8e8e8;
+}
+
+.fa-location-dot {
+  translate: -15px;
 }
 
 h2 {
@@ -70,9 +84,20 @@ section {
   flex-direction: row;
   align-items: center;
 }
-
-.fa-solid {
+.step .fa-solid {
   padding-right: 20px;
+}
+
+.number {
+  color: white;
+  background: #9356dc;
+  font-size: 0.8em;
+  text-align: center;
+  line-height: 1.7em;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  translate: -40px;
 }
 
 h4 {
@@ -109,6 +134,31 @@ h5 {
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
+}
+
+footer {
+  background-color: #343434;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  line-height: 1.7em;
+  color: white;
+}
+
+h6 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.1em;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.fa-utensils {
+  padding-right: 14px;
+  padding-left: 2px;
+}
+
+.fa-handshake-angle {
+  padding-right: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
