--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,17 +21,31 @@ header {
   text-align: center;
 }
 
+nav {
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
 h1 {
   font-family: "Shrikhand", cursive;
+  font-weight: 400;
   vertical-align: middle;
   padding-top: 20px;
   padding-bottom: 10px;
 }
 
 .localization {
-  height: 50px;
-  line-height: 50px;
+  height: 55px;
+  line-height: 55px;
   background-color: #e8e8e8;
+}
+
+.fa-location-dot {
+  translate: -15px;
 }
 
 h2 {
@@ -87,10 +101,21 @@ section {
   display: flex;
   flex-direction: row;
   align-items: center;
+  .fa-solid {
+    padding-right: 20px;
+  }
 }
 
-.fa-solid {
-  padding-right: 20px;
+.number {
+  color: white;
+  background: $color-primary;
+  font-size: 0.8em;
+  text-align: center;
+  line-height: 1.7em;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  translate: -40px;
 }
 
 h4 {
@@ -111,13 +136,14 @@ h5 {
   flex-direction: column;
   background-color: white;
   border-radius: 25px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
   img {
     max-width: 100%;
     height: 70%;
     object-fit: cover;
-  border-radius: 25px 25px 0 0;
+    border-radius: 25px 25px 0 0;
   }
 }
 
@@ -127,4 +153,29 @@ h5 {
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
+}
+
+footer {
+  background-color: #343434;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  line-height: 1.7em;
+  color: white;
+}
+
+h6 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.1em;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.fa-utensils {
+  padding-right: 14px;
+  padding-left: 2px;
+}
+
+.fa-handshake-angle {
+  padding-right: 10px;
 }
