--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,70 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.fa-arrow-left {
+  font-size: 1.2em;
+}
+
+img {
+  width: 100%;
+}
+
+.menu {
+  margin-top: -50px;
+  z-index: 1;
+  position: relative;
+  background-color: #f6f6f6;
+  padding: 20px;
+  border-radius: 40px 40px 0 0;
+}
+.menu .resto-name-fav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu h2 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.7em;
+  font-weight: 400;
+  vertical-align: middle;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+.menu .fa-heart {
+  font-size: 1.2em;
+}
+.menu h3 {
+  font-size: 0.9em;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+.menu h3::after {
+  content: "";
+  display: block;
+  width: 36px;
+  padding-top: 5px;
+  border-bottom: 3px solid #99e2d0;
+}
+.menu .description-price {
+  font-size: 0.7em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.menu .price {
+  font-weight: bold;
+}
+
+.card-dish-price {
+  background-color: white;
+}
+
 /* font-family: 'Roboto', sans-serif; */
 /* font-family: 'Shrikhand', cursive; */
 * {
