first dish card OK (without animation)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,7 @@
 @import 'pages/page-resto';
-
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
 /* font-family: 'Roboto', sans-serif; */
-/* font-family: 'Shrikhand', cursive; */
+// font-family: 'Shrikhand', cursive;
 
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
@@ -33,7 +32,7 @@ a {
 }
 
 h1 {
-  font-family: "Shrikhand", cursive;
+  font-family: 'Shrikhand', cursive;
   font-weight: 400;
   vertical-align: middle;
   padding-top: 20px;
@@ -167,7 +166,7 @@ footer {
 }
 
 h6 {
-  font-family: "Shrikhand", cursive;
+  font-family: 'Shrikhand', cursive;
   font-size: 1.1em;
   font-weight: 400;
   padding-bottom: 10px;
