--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -68,4 +68,12 @@ img {
       }
     }
   }
+  .order {
+    text-align: center;
+    .btn {
+        width: 50vw;
+        margin-bottom: 20px;
+      }
+  }
 }
+
