cards added, starters & desserts too

--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -40,6 +40,9 @@ img {
       font-size: 1.2em;
     }
   }
+.main-course, .desserts {
+  margin-top: 10px;
+}
   h3 {
     font-size: 0.9em;
     font-weight: 400;
@@ -57,6 +60,8 @@ img {
     background-color: white;
     border-radius: 20px;
     padding: 10px 15px;
+    margin-bottom: 15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     position: relative;
     white-space: nowrap;
     transition: padding-right 500ms ease-in-out;
@@ -72,6 +77,7 @@ img {
     .description-price {
       display: flex;
       flex-direction: row;
+      align-items: center;
       justify-content: space-between;
       .description {
         font-size: 0.83em;
@@ -81,6 +87,7 @@ img {
       }
       .price {
         font-weight: bold;
+        font-size: 0.9em;
       }
     }
     .dish-animation {
@@ -113,12 +120,11 @@ img {
       transform: rotate(1turn);
     }
   }
-}
-
-.order {
-  text-align: center;
-  .btn {
-    width: 50vw;
-    margin-bottom: 20px;
+  .order {
+    text-align: center;
+    .btn {
+      width: 50vw;
+    }
   }
 }
+
