--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,9 @@ img {
 .menu .resto-name-fav .fa-heart {
   font-size: 1.2em;
 }
+.menu .main-course, .menu .desserts {
+  margin-top: 10px;
+}
 .menu h3 {
   font-size: 0.9em;
   font-weight: 400;
@@ -58,6 +61,8 @@ img {
   background-color: white;
   border-radius: 20px;
   padding: 10px 15px;
+  margin-bottom: 15px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   position: relative;
   white-space: nowrap;
   transition: padding-right 500ms ease-in-out;
@@ -74,6 +79,7 @@ img {
 .menu .card-dish .description-price {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
 }
 .menu .card-dish .description-price .description {
@@ -84,6 +90,7 @@ img {
 }
 .menu .card-dish .description-price .price {
   font-weight: bold;
+  font-size: 0.9em;
 }
 .menu .card-dish .dish-animation {
   width: 15vw;
@@ -114,13 +121,11 @@ img {
 .menu .card-dish:hover .fa-circle-check {
   transform: rotate(1turn);
 }
-
-.order {
+.menu .order {
   text-align: center;
 }
-.order .btn {
+.menu .order .btn {
   width: 50vw;
-  margin-bottom: 20px;
 }
 
 /* font-family: 'Roboto', sans-serif; */
@@ -183,7 +188,7 @@ h3 {
   color: white;
   font-size: 1em;
   border: none;
-  margin-top: 40px;
+  margin: 30px;
   border-radius: 30px;
   padding: 20px;
   background: rgb(255, 121, 218);
