--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,7 +67,7 @@ h3 {
   color: white;
   font-size: 1em;
   border: none;
-  margin-top: 40px;
+  margin: 30px;
   border-radius: 30px;
   padding: 20px;
   background: rgb(255, 121, 218);
