New insert & box-shadow added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
-@import 'pages/page-resto';
+@import "pages/home";
+@import "pages/page-resto";
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 // font-family: 'Shrikhand', cursive;
@@ -23,16 +25,17 @@ header {
 }
 
 nav {
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  height: 10vh;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  position: relative;
 }
 
 a {
   text-decoration: none;
-  color: white;
 }
 
 h1 {
-  font-family: 'Shrikhand', cursive;
+  font-family: "Shrikhand", cursive;
   font-weight: 400;
   vertical-align: middle;
   padding-top: 20px;
@@ -67,7 +70,8 @@ h3 {
   color: white;
   font-size: 1em;
   border: none;
-  margin: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
   border-radius: 30px;
   padding: 20px;
   background: rgb(255, 121, 218);
@@ -96,6 +100,7 @@ section {
 
 .step {
   background-color: $grey-bg;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   margin: 0 0 20px 20px;
   border-radius: 20px;
   padding: 30px;
@@ -136,15 +141,27 @@ h5 {
   display: flex;
   flex-direction: column;
   background-color: white;
-  border-radius: 25px;
+  border-radius: 13px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
+  position: relative;
   img {
     max-width: 100%;
     height: 70%;
     object-fit: cover;
-    border-radius: 25px 25px 0 0;
+    border-radius: 13px 13px 0 0;
+  }
+
+  .new {
+    background-color: #99e2d0;
+    color: #25836c; // darker bg
+    position: absolute;
+    top: 1.5vh;
+    right: 2.5vw;
+    padding: 7px 15px;
+    border-radius: 3px;
+    font-weight: 600;
   }
 }
 
@@ -165,8 +182,12 @@ footer {
   color: white;
 }
 
+footer a {
+  color: white;
+}
+
 h6 {
-  font-family: 'Shrikhand', cursive;
+  font-family: "Shrikhand", cursive;
   font-size: 1.1em;
   font-weight: 400;
   padding-bottom: 10px;
