--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -5,12 +5,14 @@ nav {
   justify-content: center;
 }
 
+a {
+  color: black;
+}
+
 .fa-arrow-left {
   font-size: 1.2em;
   position: absolute;
   left: 20px;
-  padding-top: 20px;
-  padding-bottom: 10px;
 }
 
 img {
