--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
+a {
+  color: white;
+}
+
 nav {
   display: flex;
   flex-direction: row;
@@ -6,12 +10,14 @@ nav {
   justify-content: center;
 }
 
+a {
+  color: black;
+}
+
 .fa-arrow-left {
   font-size: 1.2em;
   position: absolute;
   left: 20px;
-  padding-top: 20px;
-  padding-bottom: 10px;
 }
 
 img {
@@ -144,12 +150,13 @@ header {
 }
 
 nav {
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+  height: 10vh;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  position: relative;
 }
 
 a {
   text-decoration: none;
-  color: white;
 }
 
 h1 {
@@ -188,7 +195,8 @@ h3 {
   color: white;
   font-size: 1em;
   border: none;
-  margin: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
   border-radius: 30px;
   padding: 20px;
   background: rgb(255, 121, 218);
@@ -205,6 +213,7 @@ section {
 
 .step {
   background-color: #f6f6f6;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   margin: 0 0 20px 20px;
   border-radius: 20px;
   padding: 30px;
@@ -245,15 +254,26 @@ h5 {
   display: flex;
   flex-direction: column;
   background-color: white;
-  border-radius: 25px;
+  border-radius: 13px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
+  position: relative;
 }
 .card-resto img {
   max-width: 100%;
   height: 70%;
   object-fit: cover;
-  border-radius: 25px 25px 0 0;
+  border-radius: 13px 13px 0 0;
+}
+.card-resto .new {
+  background-color: #99e2d0;
+  color: #25836c;
+  position: absolute;
+  top: 1.5vh;
+  right: 2.5vw;
+  padding: 7px 15px;
+  border-radius: 3px;
+  font-weight: 600;
 }
 
 .container {
@@ -270,6 +290,10 @@ footer {
   flex-direction: column;
   padding: 25px;
   line-height: 1.7em;
+  color: white;
+}
+
+footer a {
   color: white;
 }
 
