--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,13 +15,16 @@ a {
 }
 
 .fa-arrow-left {
-  font-size: 1.2em;
+  font-size: 1.3em;
   position: absolute;
-  left: 20px;
+  left: 5%;
+  top: 45%;
 }
 
 img {
   width: 100%;
+  height: 36vh;
+  object-fit: cover;
 }
 
 .menu {
@@ -46,9 +49,10 @@ img {
   font-weight: 400;
 }
 .menu .resto-name-fav .fa-heart {
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
-.menu .main-course, .menu .desserts {
+.menu .main-course,
+.menu .desserts {
   margin-top: 10px;
 }
 .menu h3 {
@@ -134,6 +138,38 @@ img {
   width: 50vw;
 }
 
+@keyframes appearance {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.appearance {
+  animation: appearance 1.5s ease-in-out;
+}
+
+.dish1 {
+  animation-delay: 0;
+}
+
+.dish2 {
+  animation-delay: 150ms;
+}
+
+.dish3 {
+  animation-delay: 300ms;
+}
+
+.dish4 {
+  animation-delay: 400ms;
+}
+
 /* font-family: 'Roboto', sans-serif; */
 * {
   margin: 0;
@@ -150,9 +186,9 @@ header {
 }
 
 nav {
-  height: 10vh;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   position: relative;
+  padding-top: 10px;
 }
 
 a {
@@ -161,10 +197,11 @@ a {
 
 h1 {
   font-family: "Shrikhand", cursive;
+  font-size: 2em;
   font-weight: 400;
   vertical-align: middle;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding-top: 2%;
+  padding-bottom: 1%;
 }
 
 .localization {
