--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -10,13 +10,16 @@ a {
 }
 
 .fa-arrow-left {
-  font-size: 1.2em;
+  font-size: 1.3em;
   position: absolute;
-  left: 20px;
+  left: 5%;
+  top: 45%;
 }
 
 img {
   width: 100%;
+  height: 36vh;
+  object-fit: cover;
 }
 
 .menu {
@@ -39,12 +42,13 @@ img {
       font-weight: 400;
     }
     .fa-heart {
-      font-size: 1.2em;
+      font-size: 1.5em;
     }
   }
-.main-course, .desserts {
-  margin-top: 10px;
-}
+  .main-course,
+  .desserts {
+    margin-top: 10px;
+  }
   h3 {
     font-size: 0.9em;
     font-weight: 400;
@@ -130,3 +134,37 @@ img {
   }
 }
 
+@keyframes appearance {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.appearance {
+  animation: appearance 1.5s ease-in-out;
+}
+
+.dish1 {
+  animation-delay: 0;
+}
+
+.dish2 {
+  animation-delay: 150ms;
+}
+
+.dish3 {
+  animation-delay: 300ms;
+}
+
+.dish4 {
+  animation-delay: 400ms;
+}
