--- a/sass/main.scss
+++ b/sass/main.scss
@@ -137,6 +137,10 @@ h5 {
   background-color: $grey-bg;
 }
 
+.fa-heart {
+  font-size: 1.4em;
+}
+
 .card-resto {
   height: 30vh;
   display: flex;
