--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -41,9 +41,9 @@ img {
       font-size: 1.7em;
       font-weight: 400;
     }
-    .fa-heart {
-      font-size: 1.5em;
-    }
+    // .fa-heart {
+    //   font-size: 1.5em;
+    // }
   }
   .main-course,
   .desserts {
