--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "pages/home";
 @import "pages/page-resto";
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,650;0,900;1,100;1,300;1,400;1,500;1,650;1,900&family=Shrikhand&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 // font-family: 'Shrikhand', cursive;
 
@@ -166,7 +166,7 @@ h5 {
     right: 2.5vw;
     padding: 7px 15px;
     border-radius: 3px;
-    font-weight: 600;
+    font-weight: 650;
   }
 }
 
@@ -205,4 +205,80 @@ h6 {
 
 .fa-handshake-angle {
   padding-right: 10px;
+}
+
+.spinner {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: spinner-opacity 3000ms forwards;
+}
+
+.icons {
+  width: 20vw;
+  height: 20vw;
+  position: relative;
+}
+
+.bg-icons {
+  background-color: #9356dc;
+  border-radius: 50%;
+  width: 30vw;
+  height: 30vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: bg-icons 2500ms forwards;
+}
+
+.icons img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: load-icons 550ms ease-in-out both;
+  @for $i from 1 through 6 {
+    &:nth-child(#{$i}) {
+      animation-delay: 550ms * $i;
+    }
+  }
+}
+
+@keyframes spinner-opacity {
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes bg-icons {
+  0%,
+  90% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes load-icons {
+  0% {
+    transform: scale(0);
+  }
+  33% {
+    transform: scale(0.8);
+  }
+  75% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
