loading, hover btn & hearts-fav added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,23 @@ $color-secondary: #ff79da;
 $color-teriary: #99e2d0;
 $grey-bg: #f6f6f6;
 
+@mixin bg-btn {
+  background: rgb(255, 121, 218);
+  background: -moz-linear-gradient(
+    171deg,
+    rgba(255, 121, 218, 1) 0%,
+    rgba(147, 86, 220, 1) 75%
+  );
+  background: -webkit-linear-gradient(
+    171deg,
+    rgba(255, 121, 218, 1) 0%,
+    rgba(147, 86, 220, 1) 75%
+  );
+  background: linear-gradient(171deg, $color-secondary 0%, $color-primary 75%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+}
+
 * {
   margin: 0;
 }
@@ -75,24 +92,18 @@ h3 {
   margin-bottom: 20px;
   border-radius: 30px;
   padding: 20px;
-  background: rgb(255, 121, 218);
-  background: -moz-linear-gradient(
-    171deg,
-    rgba(255, 121, 218, 1) 0%,
-    rgba(147, 86, 220, 1) 75%
-  );
-  background: -webkit-linear-gradient(
-    171deg,
-    rgba(255, 121, 218, 1) 0%,
-    rgba(147, 86, 220, 1) 75%
-  );
-  background: linear-gradient(
-    171deg,
-    rgba(255, 121, 218, 1) 0%,
-    rgba(147, 86, 220, 1) 75%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+  -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.5);
+  @include bg-btn;
+  &:hover {
+    -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+    background: linear-gradient(
+      171deg,
+      lighten(#ff79da, 10),
+      lighten(#9356dc, 10)
+    );
+  }
 }
 
 section {
@@ -137,9 +148,66 @@ h5 {
   background-color: $grey-bg;
 }
 
-.fa-heart {
-  font-size: 1.4em;
+.resto-name-fav {
 }
+
+.hearts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fa-regular.fa-heart {
+  font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  opacity: 1;
+  &:hover,:active,:focus {
+    opacity: 0;
+    +.fa-solid.fa-heart {
+      visibility: visible;
+    }
+  }
+}
+
+.fa-solid.fa-heart {
+  font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  visibility: hidden;
+}
+
+.bg-heart {
+  cursor: pointer;
+  background: linear-gradient(171deg, $color-secondary 0%, $color-primary 75%);
+  -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.instagram {
+  cursor: pointer;
+  // background: pink;
+	background: -webkit-radial-gradient(33% 100% circle, #515ECF 4%, #9B36B7 30%, #D92E7F 62%, #F15245 85%, #FED373);
+	background: radial-gradient(circle at 33% 100%, #ff3be7 4%, #ff3be7 28%, #03ffe8 62%, #F15245 85%, #FED373);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font: {
+		size: 20vw;
+	};
+  &:hover {
+    background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+    background: radial-gradient(circle at 33% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+// .fa-solid.fa-heart {
+//   // color: 
+//   // color: red;
+// }
+
+
 
 .card-resto {
   height: 30vh;
@@ -250,7 +318,7 @@ h6 {
 }
 
 @keyframes spinner-opacity {
-  90% {
+  85% {
     opacity: 1;
   }
   100% {
@@ -259,7 +327,10 @@ h6 {
 }
 
 @keyframes bg-icons {
-  0%,
+  0% {
+    transform: scale(0);
+  }
+  10%,
   90% {
     transform: scale(1);
   }
