--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,12 +233,19 @@ h3 {
   margin-bottom: 20px;
   border-radius: 30px;
   padding: 20px;
+  -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.5);
   background: rgb(255, 121, 218);
   background: -moz-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
   background: -webkit-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
-  background: linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
+  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+}
+.btn:hover {
+  -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+  background: linear-gradient(171deg, #fface8, #ae80e5);
 }
 
 section {
@@ -283,8 +290,52 @@ h5 {
   background-color: #f6f6f6;
 }
 
-.fa-heart {
+.hearts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fa-regular.fa-heart {
   font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  opacity: 1;
+}
+.fa-regular.fa-heart:hover, .fa-regular.fa-heart :active, .fa-regular.fa-heart :focus {
+  opacity: 0;
+}
+.fa-regular.fa-heart:hover + .fa-solid.fa-heart, .fa-regular.fa-heart :active + .fa-solid.fa-heart, .fa-regular.fa-heart :focus + .fa-solid.fa-heart {
+  visibility: visible;
+}
+
+.fa-solid.fa-heart {
+  font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  visibility: hidden;
+}
+
+.bg-heart {
+  cursor: pointer;
+  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.instagram {
+  cursor: pointer;
+  background: -webkit-radial-gradient(33% 100% circle, #515ECF 4%, #9B36B7 30%, #D92E7F 62%, #F15245 85%, #FED373);
+  background: radial-gradient(circle at 33% 100%, #ff3be7 4%, #ff3be7 28%, #03ffe8 62%, #F15245 85%, #FED373);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 20vw;
+}
+.instagram:hover {
+  background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  background: radial-gradient(circle at 33% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .card-resto {
@@ -407,7 +458,7 @@ h6 {
 }
 
 @keyframes spinner-opacity {
-  90% {
+  85% {
     opacity: 1;
   }
   100% {
@@ -415,7 +466,10 @@ h6 {
   }
 }
 @keyframes bg-icons {
-  0%, 90% {
+  0% {
+    transform: scale(0);
+  }
+  10%, 90% {
     transform: scale(1);
   }
   100% {
