--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,6 +77,19 @@ img {
 .menu .card-dish:hover {
   padding-right: 20vw;
 }
+.menu .card-dish:hover .dish-animation {
+  opacity: 1;
+  transform: translate(-10vw);
+}
+.menu .card-dish:hover .fa-circle-check {
+  transform: rotate(1turn);
+}
+.menu .card-dish:active .dish-animation {
+  background-color: #9356dc;
+}
+.menu .card-dish:active .dish-animation .fa-circle-check {
+  background-color: #9356dc;
+}
 .menu .card-dish h4 {
   font-size: 1em;
   padding-bottom: 5px;
@@ -120,13 +133,6 @@ img {
   background-color: #99e2d0;
   font-size: 1.5em;
   transition: transform 500ms ease-in-out 100ms;
-}
-.menu .card-dish:hover .dish-animation {
-  opacity: 1;
-  transform: translate(-10vw);
-}
-.menu .card-dish:hover .fa-circle-check {
-  transform: rotate(1turn);
 }
 .menu .order {
   text-align: center;
@@ -178,6 +184,14 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+h1, h2, h6 {
+  font-weight: 500;
+}
+
+h3, h4, h5 {
+  font-weight: 600;
+}
+
 header {
   text-align: center;
 }
@@ -195,7 +209,6 @@ a {
 h1 {
   font-family: "Shrikhand", cursive;
   font-size: 2em;
-  font-weight: 400;
   vertical-align: middle;
   padding-top: 2%;
   padding-bottom: 1%;
@@ -213,6 +226,7 @@ h1 {
 
 h2 {
   font-size: 1em;
+  font-weight: 500;
 }
 
 .explore {
@@ -264,6 +278,12 @@ section {
 }
 .step .fa-solid {
   padding-right: 20px;
+}
+.step:hover {
+  background-color: #f3ecff;
+}
+.step:hover .fa-solid {
+  color: #9356dc;
 }
 
 .number {
@@ -406,7 +426,6 @@ h6 {
   background-color: white;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -463,6 +482,7 @@ h6 {
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 @keyframes bg-icons {
