--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,6 +37,14 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+h1, h2, h6 {
+  font-weight: 500;
+}
+
+h3, h4, h5 {
+  font-weight: 600;
+}
+
 header {
   text-align: center;
 }
@@ -54,7 +62,6 @@ a {
 h1 {
   font-family: "Shrikhand", cursive;
   font-size: 2em;
-  font-weight: 400;
   vertical-align: middle;
   padding-top: 2%;
   padding-bottom: 1%;
@@ -72,6 +79,7 @@ h1 {
 
 h2 {
   font-size: 1em;
+  font-weight: 500;
 }
 
 .explore {
@@ -121,6 +129,12 @@ section {
   align-items: center;
   .fa-solid {
     padding-right: 20px;
+  }
+  &:hover {
+    background-color: #f3ecff;
+    .fa-solid {
+      color: $color-primary;
+    }
   }
 }
 
@@ -279,7 +293,6 @@ h6 {
   background-color: white;
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -323,6 +336,7 @@ h6 {
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 
