--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,11 +37,15 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h6 {
+h1,
+h2,
+h6 {
   font-weight: 500;
 }
 
-h3, h4, h5 {
+h3,
+h4,
+h5 {
   font-weight: 600;
 }
 
@@ -176,10 +180,16 @@ h5 {
   position: absolute;
   right: 5vw;
   opacity: 1;
-  &:hover,:active,:focus {
+  &:hover,
+  :active,
+  :focus {
     opacity: 0;
-    +.fa-solid.fa-heart {
+    transition: opacity 800ms;
+    + .fa-solid.fa-heart {
       visibility: visible;
+      transform-origin: bottom;
+      opacity: 1;
+      transition: opacity 800ms;
     }
   }
 }
@@ -189,39 +199,66 @@ h5 {
   position: absolute;
   right: 5vw;
   visibility: hidden;
+  opacity: 0;
 }
 
 .bg-heart {
   cursor: pointer;
   background: linear-gradient(171deg, $color-secondary 0%, $color-primary 75%);
   -webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
 .instagram {
   cursor: pointer;
   // background: pink;
-	background: -webkit-radial-gradient(33% 100% circle, #515ECF 4%, #9B36B7 30%, #D92E7F 62%, #F15245 85%, #FED373);
-	background: radial-gradient(circle at 33% 100%, #ff3be7 4%, #ff3be7 28%, #03ffe8 62%, #F15245 85%, #FED373);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	font: {
-		size: 20vw;
-	};
+  background: -webkit-radial-gradient(
+    33% 100% circle,
+    #515ecf 4%,
+    #9b36b7 30%,
+    #d92e7f 62%,
+    #f15245 85%,
+    #fed373
+  );
+  background: radial-gradient(
+    circle at 33% 100%,
+    #ff3be7 4%,
+    #ff3be7 28%,
+    #03ffe8 62%,
+    #f15245 85%,
+    #fed373
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font: {
+    size: 20vw;
+  }
   &:hover {
-    background: -webkit-radial-gradient(33% 100% circle, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
-    background: radial-gradient(circle at 33% 100%, #FED373 4%, #F15245 30%, #D92E7F 62%, #9B36B7 85%, #515ECF);
+    background: -webkit-radial-gradient(
+      33% 100% circle,
+      #fed373 4%,
+      #f15245 30%,
+      #d92e7f 62%,
+      #9b36b7 85%,
+      #515ecf
+    );
+    background: radial-gradient(
+      circle at 33% 100%,
+      #fed373 4%,
+      #f15245 30%,
+      #d92e7f 62%,
+      #9b36b7 85%,
+      #515ecf
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 }
 
 // .fa-solid.fa-heart {
-//   // color: 
+//   // color:
 //   // color: red;
 // }
-
-
 
 .card-resto {
   height: 30vh;
