heart fav corrected and added on pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -166,23 +166,14 @@ h5 {
   background-color: $grey-bg;
 }
 
-.resto-name-fav {
-}
-
-.hearts {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .fa-regular.fa-heart {
   font-size: 1.4em;
   position: absolute;
   right: 5vw;
   opacity: 1;
   &:hover,
-  :active,
-  :focus {
+  &:active,
+  &:focus {
     opacity: 0;
     transition: opacity 800ms;
     + .fa-solid.fa-heart {
@@ -208,57 +199,6 @@ h5 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-.instagram {
-  cursor: pointer;
-  // background: pink;
-  background: -webkit-radial-gradient(
-    33% 100% circle,
-    #515ecf 4%,
-    #9b36b7 30%,
-    #d92e7f 62%,
-    #f15245 85%,
-    #fed373
-  );
-  background: radial-gradient(
-    circle at 33% 100%,
-    #ff3be7 4%,
-    #ff3be7 28%,
-    #03ffe8 62%,
-    #f15245 85%,
-    #fed373
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font: {
-    size: 20vw;
-  }
-  &:hover {
-    background: -webkit-radial-gradient(
-      33% 100% circle,
-      #fed373 4%,
-      #f15245 30%,
-      #d92e7f 62%,
-      #9b36b7 85%,
-      #515ecf
-    );
-    background: radial-gradient(
-      circle at 33% 100%,
-      #fed373 4%,
-      #f15245 30%,
-      #d92e7f 62%,
-      #9b36b7 85%,
-      #515ecf
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-}
-
-// .fa-solid.fa-heart {
-//   // color:
-//   // color: red;
-// }
 
 .card-resto {
   height: 30vh;
