--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,27 +315,17 @@ h5 {
   background-color: #f6f6f6;
 }
 
-.hearts {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .fa-regular.fa-heart {
   font-size: 1.4em;
   position: absolute;
   right: 5vw;
   opacity: 1;
 }
-.fa-regular.fa-heart:hover,
-.fa-regular.fa-heart :active,
-.fa-regular.fa-heart :focus {
+.fa-regular.fa-heart:hover, .fa-regular.fa-heart:active, .fa-regular.fa-heart:focus {
   opacity: 0;
   transition: opacity 800ms;
 }
-.fa-regular.fa-heart:hover + .fa-solid.fa-heart,
-.fa-regular.fa-heart :active + .fa-solid.fa-heart,
-.fa-regular.fa-heart :focus + .fa-solid.fa-heart {
+.fa-regular.fa-heart:hover + .fa-solid.fa-heart, .fa-regular.fa-heart:active + .fa-solid.fa-heart, .fa-regular.fa-heart:focus + .fa-solid.fa-heart {
   visibility: visible;
   transform-origin: bottom;
   opacity: 1;
@@ -353,21 +343,6 @@ h5 {
 .bg-heart {
   cursor: pointer;
   background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.instagram {
-  cursor: pointer;
-  background: -webkit-radial-gradient(33% 100% circle, #515ecf 4%, #9b36b7 30%, #d92e7f 62%, #f15245 85%, #fed373);
-  background: radial-gradient(circle at 33% 100%, #ff3be7 4%, #ff3be7 28%, #03ffe8 62%, #f15245 85%, #fed373);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 20vw;
-}
-.instagram:hover {
-  background: -webkit-radial-gradient(33% 100% circle, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf);
-  background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
