responsive tablet explore operation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,6 +236,7 @@ h2 {
 
 .explore {
   padding: 40px 30px;
+  text-align: center;
   background-color: #f6f6f6;
 }
 
@@ -497,6 +498,22 @@ h6 {
   }
   100% {
     transform: scale(0);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body {
+    max-width: 992px;
+  }
+  .explore-opeation {
+    display: flex;
+    flex-direction: row;
+  }
+  .explore {
+    width: 50%;
+    background-color: #f3ecff;
+  }
+  .operation {
+    width: 50%;
   }
 }
 
