--- a/sass/main.scss
+++ b/sass/main.scss
@@ -169,7 +169,7 @@ h5 {
 .fa-regular.fa-heart {
   font-size: 1.4em;
   position: absolute;
-  right: 20px;
+  right: 5vw;
   opacity: 1;
   &:hover,
   &:active,
@@ -188,7 +188,7 @@ h5 {
 .fa-solid.fa-heart {
   font-size: 1.4em;
   position: absolute;
-  right: 20px;
+  right: 5vw;
   visibility: hidden;
   opacity: 0;
 }
@@ -210,6 +210,11 @@ h5 {
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
   position: relative;
+  &:hover {
+  margin-top: -5px;
+  box-shadow: rgba(147, 86, 220, 0.3) 0px 1px 2px 0px,
+  rgba(147, 86, 220, 0.3) 0px 2px 6px 2px;
+  }
   img {
     max-width: 100%;
     height: 70%;
@@ -230,7 +235,7 @@ h5 {
 }
 
 .container {
- margin: auto 0;
+  margin: auto 0;
 }
 
 .resto-place-fav {
@@ -377,6 +382,19 @@ h6 {
   .resto-place-fav {
     line-height: 1.6em;
   }
+
+  .fa-regular.fa-heart, .fa-solid.fa-heart {
+    right: 4vw;
+  }
+
+  .menu {
+    max-width: 600px;
+    margin: -30px auto 0 auto;
+  }
+
+  .menu .card-dish {
+    padding: 20px;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -422,6 +440,29 @@ h6 {
 
   .resto-place-fav {
     line-height: 1.6em;
+  }
+
+  .fa-regular.fa-heart, .fa-solid.fa-heart {
+    right: 3vw;
+  }
+
+  .menu {
+    max-width: 800px;
+    margin: -20px auto 0 auto;
+  }
+
+  .menu .card-dish {
+    padding: 25px;
+  }
+
+  .icons {
+    width: 10vw;
+    height: 10vw;
+  }
+  
+  .bg-icons {
+    width: 15vw;
+    height: 15vw;
   }
 
   footer {
